--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "bundle1306d16da579f4a7bef4.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",    
-    "start": "serve -s build ",
+    "start": "serve-build ",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install"
   },
   "keywords": [
